--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 h1 {
     font-size: 5rem;
-    color: #1F5EB9;
+    color: #fff;
 }
 
 #arrayDisplay {
@@ -109,8 +109,18 @@ h1 {
 #actionMessage {
     margin-top: 15px;
     font-size: 3rem;
-    color: #1F5EB9;
+    color: #fff;
     text-align: center;
+}
+
+@media (max-width: 1560px) {
+    html {
+        font-size: 50.5%;
+    }
+
+    .container {
+        width: 30%;
+    }
 }
 
 @media (max-width: 1440px) {
