--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     background: #7090e9;
 }
 
@@ -111,6 +112,17 @@ h1 {
     font-size: 3rem;
     color: #fff;
     text-align: center;
+}
+
+.footer{
+    width: 100%;
+    height: 5rem;
+    background: #1F5EB9;
+    color: #fff;
+    text-align: center;
+    padding: 0.8rem;
+    font-size: 3rem;
+    margin-top: 15rem;
 }
 
 @media (max-width: 1560px) {
